fix dark-btn hover effect and cursor with z-index and position relative

--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ p, h1, h2, h3, h4, h5, h6 {
     color: white;
     padding: 1rem 2rem;
     border: none;
+    position: relative;
+    z-index: 10;
     border-radius: 1.75rem;
     cursor: pointer;
     font-size: 1.125rem;
@@ -83,7 +85,7 @@ p, h1, h2, h3, h4, h5, h6 {
     letter-spacing: 0px;
     font-weight: bold;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    transition: 0.25s ease-in-out;
+    transition: .2s ease-in-out;
  }
  .dark-btn:hover {
     background-color: #666ca3;
